[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls" , "mysql"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tide = "0.16.0"