[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"

sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls" , "mysql", "chrono", "offline"]}
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }
chrono = { version = "0.4.24" }

dotenvy = { version = "0.15.7" }

tide = { version = "0.16.0", features = ["logger"] }
async-session = { version = "2.0.1" } # tide 0.16.0 uses 2.0.1

argon2 = { version = "0.5.0", features = ["std"] }
hex = { version = "0.4.3" }

lazy_static = { version = "1.4.0" }
